# Tarea3GPU

./: CMakeLists.txt  README
CUDA/: CMakeLists.txt  ConsoleVisualization.cpp  GameOfLife.cu  GameOfLife.h  SequentialGameOfLife.cpp  SequentialGameOfLife.h  SimpleVisualization.cpp  SimpleVisualization.h  Visualization.cpp  Visualization.h  defs.h  main.cpp  stuff
OpenCL/: CMakeLists.txt  HighLife.cpp  Makefile  highLifeEngine.cl
